# ingest-agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run.bat
conf/: application.conf  logging.conf  updater_logging.conf
deploy/: README.md  ingest-agent.spec  installer.iss  run_server.py  updater.py  updater.spec
deploy/winsw/: ingest-agent-service.xml
libs/: python_library-2.2.7-py3-none-any.whl  python_library-2.2.8-py3-none-any.whl  python_library-2.3.0-py3-none-any.whl
src/: main.py
src/api/: routers.py
src/api/v1/: routers.py
src/app/: ingest_agent.py  job_complete_thread.py  job_worker_thread.py
src/aws/: step_functions.py
src/config/: aws_secrets_manager.py  project_config.py  version.py
src/domain/: auth_context.py
src/exceptions/: custom_exception.py  file_not_found_exception.py  handler.py  invalid_parameter_exception.py
src/exceptions/auth/: expired_token_exception.py  invalid_token_exception.py
src/job/: complete_job.py  request_job.py  upload_job.py
src/job_container/: base_node.py  batch_container.py  composite_node.py  experiment_container.py  job_container.py  request_container.py  sample_container.py  sequence_container.py
src/meta/: api_server_client.py  batch.py  meta.py  sample.py
src/response/: error_code.py  error_response.py  response.py
src/schemas/auth/: jwt_claims_request.py
src/schemas/ingest/: __init__.py  ingest_start_response.py
src/utils/: protocol_utils.py  time_string_fit.py  util.py
tests/test_job_container/: test_job_container.py
tests/test_main/: main_test.py
(+5 files in other folders)
